--- a/src/index.html
+++ b/src/index.html
@@ -110,13 +110,11 @@
 
                                     </div>
                                     <div class="project_info-card links-card">
-                                        <a target="_blank" href="https://therapyderbyshire.co.uk/"
-                                            class="project_info-link">
+                                        <a target="_blank" href="https://harrywg.dev" class="project_info-link">
                                             <img src="images/icons/external-link.png">
                                             <p>Link</p>
                                         </a>
-                                        <a target="_blank"
-                                            href="https://www.flaticon.com/free-icon/external-link_7268615?term=link&page=1&position=7&origin=search&related_id=7268615"
+                                        <a target="_blank" href="https://github.com/Harrywg/portfolio"
                                             class="project_info-link">
                                             <img src="images/icons/github.png">
                                             <p>Code</p>
@@ -181,8 +179,7 @@
                                             <p>Link</p>
 
                                         </a>
-                                        <a target="_blank"
-                                            href="https://www.flaticon.com/free-icon/external-link_7268615?term=link&page=1&position=7&origin=search&related_id=7268615"
+                                        <a target="_blank" href="https://github.com/Harrywg/therapy-derbyshire-react"
                                             class="project_info-link">
                                             <img src="images/icons/github.png">
                                             <p>Code</p>
@@ -224,14 +221,13 @@
                                         </ul>
                                     </div>
                                     <div class="project_info-card links-card">
-                                        <a target="_blank" href="https://therapyderbyshire.co.uk/"
+                                        <a target="_blank" href="https://retrogame.netlify.app/"
                                             class="project_info-link">
                                             <img src="images/icons/external-link.png">
                                             <p>Link</p>
 
                                         </a>
-                                        <a target="_blank"
-                                            href="https://www.flaticon.com/free-icon/external-link_7268615?term=link&page=1&position=7&origin=search&related_id=7268615"
+                                        <a target="_blank" href="https://github.com/Harrywg/retrogame"
                                             class="project_info-link">
                                             <img src="images/icons/github.png">
                                             <p>Code</p>
@@ -288,14 +284,13 @@
                                         </ul>
                                     </div>
                                     <div class="project_info-card links-card">
-                                        <a target="_blank" href="https://therapyderbyshire.co.uk/"
+                                        <a target="_blank" href="https://web-design-resources.netlify.app/"
                                             class="project_info-link">
                                             <img src="images/icons/external-link.png">
                                             <p>Link</p>
 
                                         </a>
-                                        <a target="_blank"
-                                            href="https://www.flaticon.com/free-icon/external-link_7268615?term=link&page=1&position=7&origin=search&related_id=7268615"
+                                        <a target="_blank" href="https://github.com/Harrywg/Web-Dev-Resources"
                                             class="project_info-link">
                                             <img src="images/icons/github.png">
                                             <p>Code</p>
