--- a/src/index.html
+++ b/src/index.html
@@ -329,15 +329,24 @@
                     </button>
                 </div>
                 <div id="projects-wrap-mobile">
-
+                    <div class="project-mobile">
+                        <p>Portfolio</p>
+                        <div>
+                            <a target="_blank" href="https://harrywg.dev/" class="project_info-link">
+                                <img src="images/icons/external-link.png">
+                            </a>
+                            <a target="_blank" href="https://github.com/Harrywg/portfolio" class="project_info-link">
+                                <img src="images/icons/github.png">
+                            </a>
+                        </div>
+                    </div>
                     <div class="project-mobile">
                         <p>Therapy Derbyshire</p>
                         <div>
                             <a target="_blank" href="https://therapyderbyshire.co.uk/" class="project_info-link">
                                 <img src="images/icons/external-link.png">
                             </a>
-                            <a target="_blank"
-                                href="https://www.flaticon.com/free-icon/external-link_7268615?term=link&page=1&position=7&origin=search&related_id=7268615"
+                            <a target="_blank" href="https://github.com/Harrywg/therapy-derbyshire-react"
                                 class="project_info-link">
                                 <img src="images/icons/github.png">
                             </a>
@@ -345,25 +354,23 @@
                     </div>
                     <div class="project-mobile">
                         <p>Game</p>
-                        <div> <a target="_blank" href="https://therapyderbyshire.co.uk/" class="project_info-link">
+                        <div> <a target="_blank" href="https://retrogame.netlify.app/" class="project_info-link">
                                 <img src="images/icons/external-link.png">
                             </a>
-                            <a target="_blank"
-                                href="https://www.flaticon.com/free-icon/external-link_7268615?term=link&page=1&position=7&origin=search&related_id=7268615"
-                                class="project_info-link">
+                            <a target="_blank" href="https://github.com/Harrywg/retrogame" class="project_info-link">
                                 <img src="images/icons/github.png">
                             </a>
                         </div>
 
                     </div>
                     <div class="project-mobile">
-                        <p>Therapy Derbyshire</p>
+                        <p>Web Design Resources</p>
                         <div>
-                            <a target="_blank" href="https://therapyderbyshire.co.uk/" class="project_info-link">
+                            <a target="_blank" href="https://web-design-resources.netlify.app/"
+                                class="project_info-link">
                                 <img src="images/icons/external-link.png">
                             </a>
-                            <a target="_blank"
-                                href="https://www.flaticon.com/free-icon/external-link_7268615?term=link&page=1&position=7&origin=search&related_id=7268615"
+                            <a target="_blank" href="https://github.com/Harrywg/Web-Dev-Resources"
                                 class="project_info-link">
                                 <img src="images/icons/github.png">
                             </a>
