--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,13 @@
                     <h3 id="home_header-bottom">
                         Front End Developer
                     </h3>
-                </div>
 
+                </div>
+                <div id="home_links-wrap">
+                    <a class="home_link"><img src="./images/icons/linkedin.png"></a>
+                    <a class="home_link"><img src="./images/icons/github.png"></a>
+
+                </div>
 
                 <button id="home_sandbox-button"> </button>
 
@@ -85,15 +90,16 @@
                                     </div>
                                     <div class="project_info-card">
                                         <ul class="project_info-skills-list">
+                                            <li class="skills-list-heading">Key Technologies:</li>
                                             <li>GSAP</li>
+                                            <li>Parcel</li>
                                             <li>Matter.js</li>
-                                            <li>JavaScript</li>
-                                            <li>HTML / CSS</li>
+                                            <li>JS / HTML / CSS</li>
                                         </ul>
                                     </div>
 
                                     <div class="project_info-card paragraph-card">
-                                        <p>My portfolio website you are currently viewing! Developed and designed
+                                        <p>The site you are viewing! Developed and designed
                                             using
                                             JavaScript HTML and CSS.
                                             <br>
@@ -104,10 +110,10 @@
 
                                         <p>
                                         <ul class="project_info-list">
-                                            <li>How to use popular JavaScript animation libraries such as GSAP.</li>
+                                            <li>Using popular JavaScript animation libraries such as GSAP.</li>
                                             <li>Implementing a physics engine inside a website with Matterjs.
                                             </li>
-                                            <li>Designing and developing a website with interactive animations.</li>
+                                            <li>Bundling a web app with Parcel.</li>
                                         </ul>
                                         </p>
 
@@ -115,12 +121,12 @@
                                     <div class="project_info-card links-card">
                                         <a target="_blank" href="https://harrywg.dev" class="project_info-link">
                                             <img src="images/icons/external-link.png">
-                                            <p>Link</p>
+                                            <p>View Site</p>
                                         </a>
                                         <a target="_blank" href="https://github.com/Harrywg/portfolio"
                                             class="project_info-link">
                                             <img src="images/icons/github.png">
-                                            <p>Code</p>
+                                            <p>View Code</p>
 
                                         </a>
                                     </div>
@@ -149,10 +155,10 @@
                                 <div class="project_info-card-wrap">
                                     <div class="project_info-card">
                                         <ul class="project_info-skills-list">
+                                            <li class="skills-list-heading">Key Technologies:</li>
                                             <li>React</li>
                                             <li>HTML / CSS</li>
-                                            <li>Responsive Design</li>
-                                            <li>Client communication</li>
+
                                         </ul>
                                     </div>
                                     <div class="project_info-card">
@@ -179,13 +185,13 @@
                                         <a target="_blank" href="https://therapyderbyshire.co.uk/"
                                             class="project_info-link">
                                             <img src="images/icons/external-link.png">
-                                            <p>Link</p>
+                                            <p>View Site</p>
 
                                         </a>
                                         <a target="_blank" href="https://github.com/Harrywg/therapy-derbyshire-react"
                                             class="project_info-link">
                                             <img src="images/icons/github.png">
-                                            <p>Code</p>
+                                            <p>View Code</p>
 
                                         </a>
                                     </div>
@@ -215,10 +221,10 @@
                                 <div class="project_info-card-wrap">
                                     <div class="project_info-card">
                                         <ul class="project_info-skills-list">
-
+                                            <li class="skills-list-heading">Key Technologies:</li>
                                             <li>Rest API</li>
                                             <li>Strapi CMS</li>
-                                            <li>HTML / CSS</li>
+                                            <li>JS / HTML / CSS</li>
                                             <li>JavaScript Canvas API</li>
 
                                         </ul>
@@ -227,13 +233,13 @@
                                         <a target="_blank" href="https://retrogame.netlify.app/"
                                             class="project_info-link">
                                             <img src="images/icons/external-link.png">
-                                            <p>Link</p>
+                                            <p>View Site</p>
 
                                         </a>
                                         <a target="_blank" href="https://github.com/Harrywg/retrogame"
                                             class="project_info-link">
                                             <img src="images/icons/github.png">
-                                            <p>Code</p>
+                                            <p>View Code</p>
 
                                         </a>
                                     </div>
@@ -279,6 +285,7 @@
                                 <div class="project_info-card-wrap">
                                     <div class="project_info-card">
                                         <ul class="project_info-skills-list">
+                                            <li class="skills-list-heading">Key Technologies:</li>
                                             <li>Rest API</li>
                                             <li>JavaScript</li>
                                             <li>Strapi CMS</li>
@@ -290,13 +297,13 @@
                                         <a target="_blank" href="https://web-design-resources.netlify.app/"
                                             class="project_info-link">
                                             <img src="images/icons/external-link.png">
-                                            <p>Link</p>
+                                            <p>View Site</p>
 
                                         </a>
                                         <a target="_blank" href="https://github.com/Harrywg/Web-Dev-Resources"
                                             class="project_info-link">
                                             <img src="images/icons/github.png">
-                                            <p>Code</p>
+                                            <p>View Code</p>
 
                                         </a>
                                     </div>
@@ -430,8 +437,7 @@
                         </ul>
                     </div>
                     <div id="about-description-image-wrap">
-                        <img id="about-description-image"
-                            src="https://media.licdn.com/dms/image/D4D03AQHqhojfyAcRjA/profile-displayphoto-shrink_800_800/0/1675960277622?e=1681344000&v=beta&t=QY0y__xH6uA6inUIylxF1VoKSvVYha9Zd2VO1aS7QFE">
+                        <img id="about-description-image" src="./images/linkedin.png">
                         <p id="wakatime-title">Recent coding activity:</p>
 
                         <div id="wakatime-wrap">
@@ -450,77 +456,85 @@
                         </div>
                     </div>
                 </div>
-                <div id="about-titles">
-                    <h2 id="about-title-1">I'm a</h2>
-                    <h2 id="about-title-2">Problem Solver</h2>
-                    <p>I work best when I'm using:</p>
+                <div id="about-below">
+                    <div id="about-titles">
+                        <h2 id="about-title-1">I'm a</h2>
+                        <h2 id="about-title-2">Problem Solver</h2>
+                        <p>I work best when I'm using:</p>
 
-                </div>
-                <div id="skills-logo-wrap">
-                    <div class="skill-wrap">
-                        <img src="./images/icons/react.svg">
-                        <p>React</p>
                     </div>
-                    <div class="skill-wrap">
-                        <img src="./images/icons/js.svg">
-                        <p>JavaScript</p>
+                    <div id="skills-logo-wrap">
+                        <div class="skill-wrap">
+                            <img src="./images/icons/react.svg">
+                            <p>React</p>
+                        </div>
+                        <div class="skill-wrap">
+                            <img src="./images/icons/js.svg">
+                            <p>JavaScript</p>
+                        </div>
+                        <div id="skills-wrap-breakpoint"></div>
+                        <div class="skill-wrap">
+                            <img src="./images/icons/html.svg">
+                            <p>HTML</p>
+                        </div>
+                        <div class="skill-wrap">
+                            <img src="./images/icons/css.svg">
+                            <p>CSS</p>
+                        </div>
+
                     </div>
-                    <div id="skills-wrap-breakpoint"></div>
-                    <div class="skill-wrap">
-                        <img src="./images/icons/html.svg">
-                        <p>HTML</p>
+                    <div id="secondary-skills-logo-wrap">
+                        <ul>
+                            <li>Git</li>
+
+                            <li>JQuery</li>
+
+                            <li>Sass</li>
+
+                            <li>Bootstrap</li>
+                            <li>GSAP</li>
+
+                            <li>Figma</li>
+                            <li>Photoshop</li>
+
+                            <li>Responsive Design</li>
+                            <li>Strapi</li>
+
+                            <li>CMS</li>
+
+
+
+                        </ul>
                     </div>
-                    <div class="skill-wrap">
-                        <img src="./images/icons/css.svg">
-                        <p>CSS</p>
-                    </div>
-
-                </div>
-                <div id="secondary-skills-logo-wrap">
-                    <ul>
-                        <li>Git</li>
-
-                        <li>JQuery</li>
-
-                        <li>Sass</li>
-
-                        <li>Bootstrap</li>
-                        <li>GSAP</li>
-
-                        <li>Figma</li>
-                        <li>Photoshop</li>
-
-                        <li>Responsive Design</li>
-                        <li>Strapi</li>
-
-                        <li>CMS</li>
-
-
-
-                    </ul>
                 </div>
             </section>
             <section id="contact">
                 <h2>Please get in touch</h2>
                 <p>I'm always interested in new work opportunities, or tech related talk. 😊</p>
                 <div id="contact-form-wrap">
-                    <form id="contact-form">
+                    <form id="contact-form" onsubmit="return false">
                         <input id="form-input-name" type="text" name="name" placeholder="Name" required>
                         <input id="form-input-email" type="email" name="email" placeholder="Email" required>
                         <input id="form-input-subject" type="text" name="_subject" placeholder="Subject" required>
                         <textarea id="form-input-message" type="text" name="message" placeholder="Message"
                             required></textarea>
-                        <button id="form-submit-button">
+                        <button id="form-submit-button" type="submit" onclick="handleFormSubmit(this)">
                             Submit
                         </button>
+                        <div id="form-success">
+                            <p>Message received, thanks!<br> I'll get back to you ASAP.</p>
+                            <button id="form-success-button" onclick="formSuccessBack(this)">Send another
+                                message</button>
+                        </div>
                     </form>
-                </div>
 
+                </div>
+                <div id="footer">
+                    <p>Website developed by <a href="https://www.linkedin.com/in/harry-ward-gray-81840a219/"
+                            id="footer-link">Harry Ward-Gray</a></p>
+                </div>
             </section>
-            <section id="footer">
-                <p>Website developed by <a id="footer-link">Harry Ward-Gray</a></p>
-            </section>
-    </div>
+
     </div>
     </main>
 
