--- a/src/index.html
+++ b/src/index.html
@@ -55,9 +55,10 @@
 
                 </div>
                 <div id="home_links-wrap">
-                    <a class="home_link" href="https://www.linkedin.com/in/harry-ward-gray-81840a219/"><img
-                            src="./images/icons/linkedin.png"></a>
-                    <a class="home_link" href="https://github.com/Harrywg"><img src="./images/icons/github.png"></a>
+                    <a class="home_link" href="https://www.linkedin.com/in/harry-ward-gray-81840a219/"
+                        target="_blank"><img src="./images/icons/linkedin.png"></a>
+                    <a class="home_link" href="https://github.com/Harrywg" target="_blank"><img
+                            src="./images/icons/github.png"></a>
 
                 </div>
 
