--- a/src/index.html
+++ b/src/index.html
@@ -400,7 +400,7 @@
                             I love the process of learning
                             and so I'm always willing to try new technologies. Right now I'm working as a
                             freelancer for
-                            small businesses editing and maintaining websites.
+                            small businesses developing and maintaining websites.
                             <br>
                             <br>
                             So far, I've worked with:
