--- a/src/index.html
+++ b/src/index.html
@@ -444,7 +444,9 @@
                         <p id="wakatime-title">Recent coding activity:</p>
 
                         <div id="wakatime-wrap">
-                            <img src="./images/icons/wakatime.svg" id="wakatime-logo">
+                            <a href="https://wakatime.com/" targe="_blank"> <img src="./images/icons/wakatime.svg"
+                                    id="wakatime-logo"></a>
+
                             <div id="wakatime">
                                 <!-- see requests.js -->
                             </div>
