--- a/src/index.html
+++ b/src/index.html
@@ -444,7 +444,7 @@
                         <p id="wakatime-title">Recent coding activity:</p>
 
                         <div id="wakatime-wrap">
-                            <a href="https://wakatime.com/" targe="_blank"> <img src="./images/icons/wakatime.svg"
+                            <a href="https://wakatime.com/" target="_blank"> <img src="./images/icons/wakatime.svg"
                                     id="wakatime-logo"></a>
 
                             <div id="wakatime">
