--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                 </nav>
                 <div id="home_header-wrap">
 
-                    <h3 id="home_header-top">Hi, my name is</h3>
+                    <!-- <h3 id="home_header-top">Hi, my name is</h3> -->
                     <h2 id="home_header-gradient">
                         Harry Ward-Gray
                     </h2>
