--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,9 @@
             </section>
             <section id="projects">
                 <div class="project_info-button-wrap">
-                    <button onclick="projectInfoBack()" class="project_info-button">Return</button>
+                    <button onclick="projectInfoBack()" class="project_info-button">
+                        <em id="project_info-button-arrow">⬅</em> Projects
+                    </button>
                 </div>
                 <h2>Featured Projects</h2>
                 <p id="projects-tagline">Here's what I've been working on recently:</p>
