--- a/src/index.html
+++ b/src/index.html
@@ -339,12 +339,12 @@
                 </div>
                 <div id="projects-wrap-mobile">
                     <div class="project-mobile">
-                        <p>Portfolio</p>
+                        <p>Weather App</p>
                         <div>
-                            <a target="_blank" href="https://harrywg.dev/" class="project_info-link">
+                            <a target="_blank" href="https://hwg-weather-app.netlify.app/" class="project_info-link">
                                 <img src="images/icons/external-link.png">
                             </a>
-                            <a target="_blank" href="https://github.com/Harrywg/portfolio" class="project_info-link">
+                            <a target="_blank" href="https://github.com/Harrywg/weather-app" class="project_info-link">
                                 <img src="images/icons/github.png">
                             </a>
                         </div>
