--- a/src/index.html
+++ b/src/index.html
@@ -421,7 +421,13 @@
 
                     <div id="about-description-image-wrap">
                         <img id="about-description-image" src="./images/linkedin.png">
-
+                        <!-- <h3 id="about-description-title">Harry Ward-Gray</h3> -->
+                        <div id="about-description-links">
+                            <a class="home_link" href="https://www.linkedin.com/in/harry-ward-gray-81840a219/"
+                                target="_blank"><img src="./images/icons/linkedin.png"></a>
+                            <a class="home_link" href="https://github.com/Harrywg" target="_blank"><img
+                                    src="./images/icons/github.png"></a>
+                        </div>
                         <div id="wakatime-wrap">
                             <a href="https://wakatime.com/" target="_blank"> <img src="./images/icons/wakatime.svg"
                                     id="wakatime-logo"></a>
