--- a/src/index.html
+++ b/src/index.html
@@ -538,6 +538,17 @@
     <script type="module" src="./js/physics.js"></script>
     <script type="module" src="./js/requests.js"></script>
 
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HFFZRN1X31"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-HFFZRN1X31');
+    </script>
+
 </body>
 
 </html>
