--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,10 @@
                     <h3 id="home_header-bottom">
                         Front End Developer
                     </h3>
-
+                    <a href="./cv.pdf" target="_blank" id="home_download-cv"><img id="home_download-cv-img"
+                            src="./images/icons/downloading.png" />
+                        <div>CV</div>
+                    </a>
                 </div>
                 <div id="home_links-wrap">
                     <a class="home_link" href="https://www.linkedin.com/in/harry-ward-gray-81840a219/"
@@ -546,6 +549,7 @@
     <script type="module" src="./js/animations.js"></script>
     <script type="module" src="./js/physics.js"></script>
     <script type="module" src="./js/requests.js"></script>
+    <script type="module" src="./js/pdf.js"></script>
 
 
 
