--- a/src/index.html
+++ b/src/index.html
@@ -326,5 +326,6 @@
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script type="module" src="./js/animations.js"></script>
     <script type="module" src="./js/physics.js"></script>
+    <script type="module" src="./js/buttons.js"></script>
   </body>
 </html>
