--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
           <button id="home_sandbox-button"></button>
         </section>
         <section id="projects" class="content-section">
-          <h2>Featured Projects</h2>
+          <h2>Projects</h2>
           <h3 id="favourite">NC News<span class="date"> - Sep 2023</span></h3>
           <nav>
             <a href="https://github.com/Harrywg/nc-news-react" target="_blank"
@@ -301,7 +301,7 @@
                   id="form-success-button"
                   onclick="formSuccessBack(this)"
                 >
-                  Send another message
+                  Send anot her message
                 </button>
               </div>
             </form>
