--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,10 @@
     <link rel="stylesheet" href="./css/contact.css" />
     <link rel="stylesheet" href="./css/about.css" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
-
+    <script src="./js/buttons.js"></script>
+    <script defer src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+    <script defer type="module" src="./js/animations.js"></script>
+    <script defer type="module" src="./js/physics.js"></script>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -44,7 +47,6 @@
   </head>
 
   <body>
-    <script src="./js/buttons.js"></script>
     <div id="physics-engine-wrap" class="less-opacity"></div>
     <div id="animation-els">
       <div class="cursor"></div>
@@ -323,9 +325,5 @@
     <div id="sandbox-return-wrap">
       <button id="sandbox-return">Return</button>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-    <script type="module" src="./js/animations.js"></script>
-    <script type="module" src="./js/physics.js"></script>
-    <!-- <script defer src="./js/buttons.js"></script> -->
   </body>
 </html>
