--- a/src/index.html
+++ b/src/index.html
@@ -287,24 +287,13 @@
                 placeholder="Message"
                 required
               ></textarea>
-              <button
-                id="form-submit-button"
-                type="submit"
-                onclick="handleFormSubmit(this)"
-              >
-                Submit
-              </button>
+              <button id="form-submit-button" type="submit">Submit</button>
               <div id="form-success">
                 <p>
                   Message received, thanks!<br />
                   I'll get back to you ASAP.
                 </p>
-                <button
-                  id="form-success-button"
-                  onclick="formSuccessBack(this)"
-                >
-                  Send anot her message
-                </button>
+                <button id="form-success-button">Send another message</button>
               </div>
             </form>
           </div>
