Change profile image link

--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@
             <div id="about-description-links">
               <a
                 class="home_link"
-                href="https://www.linkedin.com/in/harry-ward-gray-81840a219/"
+                href="https://media.licdn.com/dms/image/D5603AQGCOpSx-hMe1w/profile-displayphoto-shrink_800_800/0/1690991216234?e=1710374400&v=beta&t=VK29mIKBz__5y7ws61fWmYzv6-ewd0cywtvHABeR5O8"
                 target="_blank"
                 ><img src="./images/icons/linkedin.png"
               /></a>
