fix profpic reference

--- a/src/index.html
+++ b/src/index.html
@@ -206,7 +206,7 @@
           <div id="about-description-image-wrap">
             <img
               id="about-description-image"
-              src="https://media.licdn.com/dms/image/D5603AQGCOpSx-hMe1w/profile-displayphoto-shrink_800_800/0/1690991215581?e=1699488000&v=beta&t=NfQeudbCdDlhq9-1WZXNZpEiMHSuvRnuvfnCpsqAQiE"
+              src="src/images/profipic.jpeg"
             />
             <!-- <h3 id="about-description-title">Harry Ward-Gray</h3> -->
             <div id="about-description-links">
