fix typo in profpic ref

--- a/src/index.html
+++ b/src/index.html
@@ -206,7 +206,7 @@
           <div id="about-description-image-wrap">
             <img
               id="about-description-image"
-              src="src/images/profipic.jpeg"
+              src="./images/profipic.jpeg"
             />
             <!-- <h3 id="about-description-title">Harry Ward-Gray</h3> -->
             <div id="about-description-links">
